[package]
name = "paillier"
version = "0.3.10"
edition = "2018"

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
# rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
rust-gmp-kzen = { version = "0.5", features = ["serde_support"] }
rand = "0"
sha2 = "0"
digest = "0"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand_chacha = "0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
